syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.notification.config.service.v1;

message NotificationChannel {
  string id = 1;
  NotificationChannelMutableData notification_channel_mutable_data = 2;
}

message NotificationChannelMutableData {
  string channel_name = 1;
  repeated EmailChannelConfig email_channel_config = 2;
  repeated WebhookChannelConfig webhook_channel_config = 3;
}

enum WebhookFormat {
  WEBHOOK_FORMAT_UNSPECIFIED = 0;
  WEBHOOK_FORMAT_SLACK = 1;
  WEBHOOK_FORMAT_JSON = 2;
}

message WebhookChannelConfig {
  string url = 1;
  WebhookFormat format = 2;
  map<string, string> headers = 3;
}

message EmailChannelConfig {
  string address = 1;
}
